--- a/index.html
+++ b/index.html
@@ -1,1 +1,58 @@
-Hello World!
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <title>~/startpage</title>
+    <link rel="stylesheet" type="text/css" href="sheet.css">
+</head>
+
+<body>
+
+        <div class="right-container">
+            <div class="head">
+                <p>> Sento@BD3 ~$<span class="blinking">_</span></p>
+            </div>
+
+            <div class="bookmarks">
+                <div class="category">
+                    <div class="links">
+                        <li class="title">work</li>
+                        <li><a href="https://gmail.com">gmail</a></li>
+                    </div>
+                </div>
+
+                <div class="category">
+                    <div class="links">
+                        <li class="title">dev</li>
+                        <li><a href="https://github.com/">github</a></li>
+                        <li><a href="https://lobste.rs/">lobste.rs</a></li>
+                        <li><a href="https://mankier.com/">mankier</a></li>
+                        <li><a href="https://devdocs.io/">devdocs</a></li>
+                    </div>
+                </div>
+
+                <div class="category">
+                    <div class="links">
+                        <li class="title"><a style="color: #EADBB2" href="https://reddit.com">reddit</a></li>
+                        <li><a href="https://reddit.com/r/programming/">programming</a></li>
+                        <li><a href="https://www.reddit.com/user/xiaman/m/van_life/>van life</a></li>
+                        <li><a href="https://www.reddit.com/user/xiaman/m/travel/">travel feed</a></li>
+                        <li><a href="https://reddit.com/r/myog/">MYOG</a></li>
+                    </div>
+                </div>
+
+                <div class="category">
+                    <div class="links">
+                        <li class="title">play</li>
+                        <li><a href="https://youtube.com/">youtube</a></li>
+                        <li><a href="https://twitch.tv/">twitch</a></li>
+			<li><a href="https://solar.lowtechmagazine.com/">Low Tech</a></li>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</body>
+
+</html>
