--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <div class="links">
                         <li class="title">dev</li>
                         <li><a href="https://github.com/">github</a></li>
-                        <li><a href="https://lobste.rs/">lobste.rs</a></li>
+                        <li><a href="https://news.ycombinator.com/">hacker news</a></li>
                         <li><a href="https://mankier.com/">mankier</a></li>
                         <li><a href="https://devdocs.io/">devdocs</a></li>
                     </div>
@@ -35,7 +35,7 @@
                 <div class="category">
                     <div class="links">
                         <li class="title"><a style="color: #EADBB2" href="https://reddit.com">reddit</a></li>
-                        <li><a href="https://reddit.com/r/programming/">programming</a></li>
+                        <li><a href="https://reddit.com/r/hiking/">hiking</a></li>
                         <li><a href="https://www.reddit.com/user/xiaman/m/van_life/>van life</a></li>
                         <li><a href="https://www.reddit.com/user/xiaman/m/travel/">travel feed</a></li>
                         <li><a href="https://reddit.com/r/myog/">MYOG</a></li>
