--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>~/startpage</title>
+    <title>Sent Zero</title>
     <link rel="stylesheet" type="text/css" href="sheet.css">
 </head>
 
@@ -19,6 +19,7 @@
                     <div class="links">
                         <li class="title">work</li>
                         <li><a href="https://gmail.com">gmail</a></li>
+                        <li><a href="https://news.ycombinator.com/">hacker news</a></li>
                     </div>
                 </div>
 
@@ -26,7 +27,6 @@
                     <div class="links">
                         <li class="title">dev</li>
                         <li><a href="https://github.com/">github</a></li>
-                        <li><a href="https://news.ycombinator.com/">hacker news</a></li>
                         <li><a href="https://mankier.com/">mankier</a></li>
                         <li><a href="https://devdocs.io/">devdocs</a></li>
                     </div>
@@ -34,11 +34,11 @@
 
                 <div class="category">
                     <div class="links">
-                        <li class="title"><a style="color: #EADBB2" href="https://reddit.com">reddit</a></li>
+                        <li class="title"><a href="https://reddit.com">reddit</a></li>
                         <li><a href="https://reddit.com/r/hiking/">hiking</a></li>
                         <li><a href="https://www.reddit.com/user/xiaman/m/van_life/>van life</a></li>
                         <li><a href="https://www.reddit.com/user/xiaman/m/travel/">travel feed</a></li>
-                        <li><a href="https://reddit.com/r/myog/">MYOG</a></li>
+                        <li><a href="https://reddit.com/r/myog/">myog</a></li>
                     </div>
                 </div>
 
@@ -47,7 +47,7 @@
                         <li class="title">play</li>
                         <li><a href="https://youtube.com/">youtube</a></li>
                         <li><a href="https://twitch.tv/">twitch</a></li>
-			<li><a href="https://solar.lowtechmagazine.com/">Low Tech</a></li>
+			<li><a href="https://solar.lowtechmagazine.com/">low tech</a></li>
                     </div>
                 </div>
             </div>
