--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
                 <div class="category">
                     <div class="links">
-                        <li class="title"><a href="https://reddit.com">reddit</a></li>
+                        <li class="title"><a style="color: #EADBB2" ref="https://reddit.com">reddit</a></li>
                         <li><a href="https://reddit.com/r/hiking/">hiking</a></li>
                         <li><a href="https://www.reddit.com/user/xiaman/m/van_life/>van life</a></li>
                         <li><a href="https://www.reddit.com/user/xiaman/m/travel/">travel feed</a></li>
