--- a/index.html
+++ b/index.html
@@ -8,18 +8,24 @@
 </head>
 
 <body>
+	<div class="container">
+	<div class="left-container">
+		<img src="vaporwave.png"/>	    
+	</div>
 
         <div class="right-container">
             <div class="head">
-                <p>> Sento@BD3 ~$<span class="blinking">_</span></p>
+                <p>Sent0@BD3 ~$<span class="blinking">_</span></p>
             </div>
 
             <div class="bookmarks">
                 <div class="category">
                     <div class="links">
                         <li class="title">work</li>
-                        <li><a href="https://gmail.com">gmail</a></li>
+                        <li><a href="https://hotmail.com/">hotmail</a></li>
                         <li><a href="https://news.ycombinator.com/">hacker news</a></li>
+			<li><a href="https://Upwork.com/ab/account-security/login">upwork</a></li>
+			<li><a href=></a></li>
                     </div>
                 </div>
 
@@ -34,9 +40,9 @@
 
                 <div class="category">
                     <div class="links">
-                        <li class="title"><a style="color: #EADBB2" ref="https://reddit.com">reddit</a></li>
+                        <li class="title"><a style="color: #EADBB2" href="https://reddit.com">reddit</a></li>
                         <li><a href="https://reddit.com/r/hiking/">hiking</a></li>
-                        <li><a href="https://www.reddit.com/user/xiaman/m/van_life/>van life</a></li>
+                        <li><a href="https://www.reddit.com/user/xiaman/m/van_life/">van life</a></li>
                         <li><a href="https://www.reddit.com/user/xiaman/m/travel/">travel feed</a></li>
                         <li><a href="https://reddit.com/r/myog/">myog</a></li>
                     </div>
@@ -48,10 +54,13 @@
                         <li><a href="https://youtube.com/">youtube</a></li>
                         <li><a href="https://twitch.tv/">twitch</a></li>
 			<li><a href="https://solar.lowtechmagazine.com/">low tech</a></li>
-                    </div>
+			<li><a href="https://thinkpads.com/t61/">t61 wiki</a></li>
+			<li><a href="https://web.telegram.org/z/">telegram<a></li> 
+                   </div>
                 </div>
             </div>
         </div>
+    </div>
     </div>
 </body>
 
