Added a couple links, removed a couple others

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
         <div class="right-container">
             <div class="head">
-                <p>Sent0@BD3 ~$<span class="blinking">_</span></p>
+                <p>Sent0@BD5 ~$<span class="blinking">_</span></p>
             </div>
 
             <div class="bookmarks">
@@ -24,8 +24,7 @@
                         <li class="title">work</li>
                         <li><a href="https://hotmail.com/">hotmail</a></li>
                         <li><a href="https://news.ycombinator.com/">hacker news</a></li>
-			<li><a href="https://Upwork.com/ab/account-security/login">upwork</a></li>
-			<li><a href=></a></li>
+			  
                     </div>
                 </div>
 
@@ -35,6 +34,7 @@
                         <li><a href="https://github.com/">github</a></li>
                         <li><a href="https://mankier.com/">mankier</a></li>
                         <li><a href="https://devdocs.io/">devdocs</a></li>
+			  <li><a href="https://www.tylerrusch.com">my site</a></li>
                     </div>
                 </div>
 
@@ -43,7 +43,7 @@
                         <li class="title"><a style="color: #EADBB2" href="https://reddit.com">reddit</a></li>
                         <li><a href="https://reddit.com/r/hiking/">hiking</a></li>
                         <li><a href="https://www.reddit.com/user/xiaman/m/van_life/">van life</a></li>
-                        <li><a href="https://www.reddit.com/user/xiaman/m/travel/">travel feed</a></li>
+			  <li><a href="https://n-o-d-e.net/index.html">n o d e</a></li>
                         <li><a href="https://reddit.com/r/myog/">myog</a></li>
                     </div>
                 </div>
@@ -54,8 +54,7 @@
                         <li><a href="https://youtube.com/">youtube</a></li>
                         <li><a href="https://twitch.tv/">twitch</a></li>
 			<li><a href="https://solar.lowtechmagazine.com/">low tech</a></li>
-			<li><a href="https://thinkpads.com/t61/">t61 wiki</a></li>
-			<li><a href="https://web.telegram.org/z/">telegram<a></li> 
+			<li><a href="https://todoist.com/app/today">todoist<a></li> 
                    </div>
                 </div>
             </div>
