More link changes

--- a/index.html
+++ b/index.html
@@ -21,10 +21,11 @@
             <div class="bookmarks">
                 <div class="category">
                     <div class="links">
-                        <li class="title">work</li>
-                        <li><a href="https://hotmail.com/">hotmail</a></li>
-                        <li><a href="https://news.ycombinator.com/">hacker news</a></li>
-			  
+                        <li class="title">organize</li>
+                        <li><a href="https://hotmail.com/">outlook</a></li>
+                        <li><a href="https://mail.hover.com/?_task=mail&mbox=INBOX">hover-mail</a></li>
+                        <li><a href="https://todoist.com/app/today">todoist</a></li>
+                        <li>
                     </div>
                 </div>
 
@@ -32,29 +33,29 @@
                     <div class="links">
                         <li class="title">dev</li>
                         <li><a href="https://github.com/">github</a></li>
-                        <li><a href="https://mankier.com/">mankier</a></li>
                         <li><a href="https://devdocs.io/">devdocs</a></li>
-			  <li><a href="https://www.tylerrusch.com">my site</a></li>
+			            <li><a href="https://www.tylerrusch.com">my site</a></li>
+                        <li><a href="https://easyeda.com/editor">easyeda</a></li>
                     </div>
                 </div>
 
                 <div class="category">
                     <div class="links">
-                        <li class="title"><a style="color: #EADBB2" href="https://reddit.com">reddit</a></li>
-                        <li><a href="https://reddit.com/r/hiking/">hiking</a></li>
+                        <li class="title">imagine</li>
                         <li><a href="https://www.reddit.com/user/xiaman/m/van_life/">van life</a></li>
-			  <li><a href="https://n-o-d-e.net/index.html">n o d e</a></li>
-                        <li><a href="https://reddit.com/r/myog/">myog</a></li>
+                        <li><a href="https://reddit.com/user/xiaman/m/travel/">travel</a></li>
+			            <li><a href="https://solar.lowtechmagazine.com/">low tech</a></li>
+                        <li><a href="https://news.ycombinator.com/">hacker news</a></li>
                     </div>
                 </div>
 
                 <div class="category">
                     <div class="links">
                         <li class="title">play</li>
-                        <li><a href="https://youtube.com/">youtube</a></li>
-                        <li><a href="https://twitch.tv/">twitch</a></li>
-			<li><a href="https://solar.lowtechmagazine.com/">low tech</a></li>
-			<li><a href="https://todoist.com/app/today">todoist<a></li> 
+                        <li><a href="https://open.spotify.com/">spotify</a></li>
+			            <li><a href="https://n-o-d-e.net/index.html">n o d e</a></li>
+                        <li><a href="https://facebook.com/marketplace/inbox">marketplace</a></li>
+
                    </div>
                 </div>
             </div>
